Aligns button height within forms with default button min-height. Fixes inline form behaviour within button containers

--- a/manon/form-button-variables.scss
+++ b/manon/form-button-variables.scss
@@ -4,6 +4,7 @@
 :root {
   --form-button-align-self: var(--button-base-align-self);
   --form-button-min-width: var(--button-base-min-width);
+  --form-button-min-height: var(--button-base-min-height);
   --form-button-width: 100%;
   --form-button-padding-top: var(--button-base-padding-top);
   --form-button-padding-right: var(--button-base-padding-right);
