--- a/manon/form-inline-variables.scss
+++ b/manon/form-inline-variables.scss
@@ -5,4 +5,5 @@
   --form-inline-gap: var(--application-base-gap);
   --form-inline-text-color: var(--application-base-text-color);
   --form-inline-flex-direction: row;
+  --form-inline-width: auto;
 }
