--- a/manon/form-inline.scss
+++ b/manon/form-inline.scss
@@ -9,4 +9,5 @@ form.inline {
   gap: var(--form-inline-gap);
   color: var(--form-inline-text-color);
   flex-direction: var(--form-inline-flex-direction);
+  width: var(--form-inline-width);
 }
